# lrgsglib-public

./: .env  .gitattributes  .gitignore  .gitmodules  .help_proteus.md  GNUmakefile  LICENCE  LRG-Signed.yml  LRG-Signed_env.yml  LRG-Signed_test.yml  Makefile  README.md  a.out  chat_2024_01_30_15_40_04.md  config_env.sh  cprog.c  environment.yml  lrgsgenv.yml  prova.gpickle  pyproject.toml  spectrum  test  test.txt  test2.text  test_file.npz  text.yml  unconfig_env.sh
.trash/: fortrancode.f
Dendrogram/: Dendrogram_pablo.ipynb  Dendrogram_toy_giulio.ipynb
Entropy/: Entropy.ipynb
ipynb/: PhD.py  PhD_2.ipynb  PhD_3.ipynb  Untitled-1.ipynb  brain_netw.ipynb  brainnet_signed_correlations.ipynb  brainnet_test.ipynb  brainnet_timeseries.ipynb  brainnet_timeseries_emd copy 2.ipynb  brainnet_timeseries_emd copy 3.ipynb  brainnet_timeseries_emd copy.ipynb  brainnet_timeseries_emd.ipynb  chladni_decomp.ipynb  chladni_fig01.ipynb  chladni_fig02.ipynb  chladni_fig04.ipynb  devTool_ErdosRenyi.ipynb  devTool_ResolutionLimit.ipynb  devTool_SignedRW.ipynb  dev_tool_ErdosRenyi.ipynb  dev_tool_GraphTool.ipynb  dev_tool_LaplSpect.ipynb  dev_tool_Lattice2D.ipynb  dev_tool_Lattice3D.ipynb  dev_tool_Miscellanea.ipynb  dev_tool_ResolutionLimit.ipynb  dev_tool_ResolutionLimit_2.ipynb  dev_tool_SignedGraph.ipynb  dev_tool_SignedRW.ipynb  eigvmaker.ipynb  fig01_panel1.ipynb  fig02_panel2.ipynb  fig03_panel3 copy 2.ipynb  fig03_panel3.ipynb  fig03_panel3_old.ipynb  fig04_panel4.ipynb  img_slides.ipynb  nb_plotsheet.mplstyle  sg_Lattice2D_IsingDynamics.ipynb  sg_Lattice2D_SLDynamics.ipynb  (+24 more)
nb/: Figs.ipynb  dev_tool_Lattice2D.ipynb  dev_tool_Lattice3D.ipynb  dev_tool_signedgraph.ipynb  fig01_panel1.ipynb  to_do.ipynb  (+16 more)
(+569 files in other folders)
