[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LRGSG_package"
version = "0.0.1"
authors = [
  { name="Giulio Iannelli", email="giulio.iannelli@cref.it" },
  { name="Pablo Villegas", email="pablo.villegas@cref.it" },
]
description = "A package containing useful classes and functions for stting up the theoretical apparatus of the Laplacian Renormalizazion Group for Signed Graph"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "hhttps://github.com/pvgongora/LRG-Signed"
"Bug Tracker" = "https://github.com/pvgongora/LRG-Signed/issues"
