[build-system]
requires = ["setuptools>=42", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lrgsglib"
version = "0.0.1"
authors = [
  { name="Giulio Iannelli", email="giulioiannelli.w@gmail.com" },
  { name="Pablo Villegas", email="pablo.villegas@cref.it" },
]
description = "A package containing useful classes and functions for stting up the theoretical apparatus of the Laplacian Renormalizazion Group for Signed Graph"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/giulioiannelli/lrgsglib"
"Bug Tracker" = "https://github.com/giulioiannelli/lrgsglib/issues"

[tool.black]
line-length = 80